--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("mysql:mysql-connector-java:6.0.6")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit")
@@ -27,13 +28,15 @@ bootRun.environment([
         "MEMORY_LIMIT":"12G",
         "CF_INSTANCE_INDEX":"34",
         "CF_INSTANCE_ADDR":"123.sesame.street",
-        "SPRING_DATASOURCE_URL": developmentDbUrl
+        "SPRING_DATASOURCE_URL": developmentDbUrl,
+        "MANAGEMENT_SECURITY_ENABLED": false
 ])
 
 def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
-        "SPRING_DATASOURCE_URL": testDbUrl
+        "SPRING_DATASOURCE_URL": testDbUrl,
+        "MANAGEMENT_SECURITY_ENABLED": false
 ])
 
 flyway {
@@ -45,4 +48,8 @@ flyway {
 
 task testMigrate(type: FlywayMigrateTask) {
     url = testDbUrl
+}
+
+springBoot {
+    buildInfo()
 }
